section hero fix on mobile

--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -15,7 +15,8 @@
     @include respond-to(smallScreen) {
       transform: rotate(90deg);
       height: 271px;
-      width: 410px;
+      width: 100%;
+      max-width: 390px;
       margin-top: 80px;
       align-items: normal;
       padding-right: 27px;
